fix/overflow-for-chat-unread

--- a/src/App.scss
+++ b/src/App.scss
@@ -941,6 +941,9 @@ nav {
   min-height: 1.3rem;
   max-height: 1.3rem;
   line-height: 1.3rem;
+  max-width: 10em;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .chat-layout {
